HelloUltraviolet/Fixtures/RejectedSource/Names/PrivateAccess/Source/Main.uv
//! Rejected name-resolution specimen for private declaration access.

import PrivateAccess::Hidden

public procedure privateAccessReference() -> i32 {
    return Hidden::hiddenPrivateValue()
}
